fix #67. I don't love it but at least it's a little more legible. We need to take meeting time (or something) to come up with a stronger/more flexible color palette and update design standards accordingly.

--- a/assets/css/small-raffle-meter.css
+++ b/assets/css/small-raffle-meter.css
@@ -35,6 +35,9 @@
 }
 a.raffle-link {
     /* This is here if we ever need to change anything. */
+    font-weight: bold;
+    color: #fff;
+    text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 /* For mobile */
